test(bpmn): use testcontainers and JUnit5
* replace zeebe-test with zeebe-testcontainers
* dump junit from 4.13.2 to 5.7.1