@@ -2,33 +2,34 @@ package io.zeebe.script;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import io.camunda.zeebe.client.api.response.ProcessInstanceEvent;
+import io.camunda.zeebe.client.ZeebeClient;
+import io.camunda.zeebe.client.api.response.ProcessInstanceResult;
+import io.zeebe.containers.ZeebeContainer;
 import io.camunda.zeebe.model.bpmn.Bpmn;
 import io.camunda.zeebe.model.bpmn.BpmnModelInstance;
-import io.camunda.zeebe.protocol.record.intent.MessageIntent;
-import io.camunda.zeebe.protocol.record.value.MessageRecordValue;
-import io.camunda.zeebe.test.ZeebeTestRule;
-import io.camunda.zeebe.test.util.record.RecordingExporter;
 import java.util.Collections;
 import java.util.Map;
-import org.junit.BeforeClass;
-import org.junit.ClassRule;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.BeforeAll;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.testcontainers.junit.jupiter.Container;
+import org.testcontainers.junit.jupiter.Testcontainers;
 
-@RunWith(SpringRunner.class)
 @SpringBootTest
+@Testcontainers
 public class WorkflowTest {
 
-  @ClassRule public static final ZeebeTestRule TEST_RULE = new ZeebeTestRule();
+  @Container private static final ZeebeContainer ZEEBE_CONTAINER = new ZeebeContainer();
 
-  @BeforeClass
+  private static ZeebeClient ZEEBE_CLIENT;
+
+  @BeforeAll
   public static void init() {
-    System.setProperty(
-        "zeebe.client.broker.contactPoint",
-        TEST_RULE.getClient().getConfiguration().getGatewayAddress());
+    final var gatewayContactPoint = ZEEBE_CONTAINER.getExternalGatewayAddress();
+    System.setProperty("zeebe.client.broker.contactPoint", gatewayContactPoint);
+
+    ZEEBE_CLIENT =
+        ZeebeClient.newClientBuilder().gatewayAddress(gatewayContactPoint).usePlaintext().build();
   }
 
   @Test
@@ -45,10 +46,10 @@ public class WorkflowTest {
                         .zeebeTaskHeader("script", "x + 1"))
             .done();
 
-    final ProcessInstanceEvent workflowInstance =
+    final var workflowInstanceResult =
         deployAndCreateInstance(workflow, Collections.singletonMap("x", 2));
 
-    ZeebeTestRule.assertThat(workflowInstance).isEnded().hasVariable("result", 3);
+    assertThat(workflowInstanceResult.getVariablesAsMap()).containsEntry("result", 3);
   }
 
   @Test
@@ -65,59 +66,56 @@ public class WorkflowTest {
                         .zeebeTaskHeader("script", "job.processInstanceKey"))
             .done();
 
-    final ProcessInstanceEvent workflowInstance =
-        deployAndCreateInstance(workflow, Collections.emptyMap());
+    final var workflowInstanceResult = deployAndCreateInstance(workflow, Collections.emptyMap());
 
-    ZeebeTestRule.assertThat(workflowInstance)
-        .isEnded()
-        .hasVariable("result", workflowInstance.getProcessInstanceKey());
+    assertThat(workflowInstanceResult.getVariablesAsMap())
+        .containsEntry("result", workflowInstanceResult.getProcessInstanceKey());
   }
 
   @Test
   public void shouldUseZeebeClient() {
+    final String groovyScript =
+        "zeebeClient.newPublishMessageCommand()"
+            + ".messageName('foo')"
+            + ".correlationKey(key)"
+            + ".timeToLive(java.time.Duration.ofMinutes(1))"
+            + ".variables('{\"x\":1}')"
+            + ".send().join()";
 
     final BpmnModelInstance workflow =
         Bpmn.createExecutableProcess("process")
             .startEvent()
+            .parallelGateway("fork")
             .serviceTask(
                 "task",
-                t ->
-                    t.zeebeJobType("script")
-                        .zeebeTaskHeader("language", "groovy")
-                        .zeebeTaskHeader(
-                            "script",
-                            "zeebeClient.newPublishMessageCommand().messageName('foo').correlationKey('bar').send().join()"))
+                t -> {
+                  t.zeebeJobType("script")
+                      .zeebeTaskHeader("language", "groovy")
+                      .zeebeTaskHeader("script", groovyScript);
+                })
+            .endEvent()
+            .moveToNode("fork")
+            .intermediateCatchEvent(
+                "message", e -> e.message(m -> m.name("foo").zeebeCorrelationKeyExpression("key")))
+            .endEvent()
             .done();
 
-    final ProcessInstanceEvent workflowInstance =
-        deployAndCreateInstance(workflow, Collections.emptyMap());
+    final var workflowInstanceResult = deployAndCreateInstance(workflow, Map.of("key", "key-1"));
 
-    ZeebeTestRule.assertThat(workflowInstance).isEnded();
-
-    final MessageRecordValue publishedMessage =
-        RecordingExporter.messageRecords(MessageIntent.PUBLISHED).getFirst().getValue();
-    assertThat(publishedMessage.getName()).isEqualTo("foo");
-    assertThat(publishedMessage.getCorrelationKey()).isEqualTo("bar");
+    assertThat(workflowInstanceResult.getVariablesAsMap()).containsEntry("x", 1);
   }
 
-  private ProcessInstanceEvent deployAndCreateInstance(
+  private ProcessInstanceResult deployAndCreateInstance(
       final BpmnModelInstance workflow, Map<String, Object> variables) {
-    TEST_RULE
-        .getClient()
-        .newDeployCommand()
-        .addProcessModel(workflow, "process.bpmn")
+    ZEEBE_CLIENT.newDeployCommand().addProcessModel(workflow, "process.bpmn").send().join();
+
+    return ZEEBE_CLIENT
+        .newCreateInstanceCommand()
+        .bpmnProcessId("process")
+        .latestVersion()
+        .variables(variables)
+        .withResult()
         .send()
         .join();
-
-    final ProcessInstanceEvent workflowInstance =
-        TEST_RULE
-            .getClient()
-            .newCreateInstanceCommand()
-            .bpmnProcessId("process")
-            .latestVersion()
-            .variables(variables)
-            .send()
-            .join();
-    return workflowInstance;
   }
 }
